--- a/package.json
+++ b/package.json
@@ -8,17 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "^1.0.2-beta.2",
-    "next": "12.0.8",
+    "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.49.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.12",
-    "@types/react": "^17.0.38",
-    "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8",
-    "typescript": "^4.5.5"
+    "@types/node": "17.0.13",
+    "@types/react": "17.0.38",
+    "eslint": "8.8.0",
+    "eslint-config-next": "12.0.9",
+    "typescript": "4.5.5"
   }
 }
