--- a/paris/package.json
+++ b/paris/package.json
@@ -8,6 +8,8 @@
     "config": "^3.3.7",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.2.1",
     "morgan": "^1.10.0",
     "yup": "^0.32.11"
@@ -23,6 +25,7 @@
     "@types/config": "^0.0.41",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.16",
