yarn workspace and scripts

--- a/helen/package.json
+++ b/helen/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "@eduportal-cet/client",
+  "name": "helen",
   "private": true,
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "next": "12.0.9",
