--- a/paris/package.json
+++ b/paris/package.json
@@ -15,9 +15,11 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "nodemon src/index.ts",
+    "dev": "nodemon src/index.ts",
+    "build": "tsc",
     "lint": "eslint \"./src/**/*.ts\"",
-    "lint:fix": "eslint \"./src/**/*.ts\" --fix"
+    "lint:fix": "eslint \"./src/**/*.ts\" --fix",
+    "format": "prettier --write ./src/*"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -33,6 +35,7 @@
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "eslint": "^8.8.0",
+    "prettier": "^2.5.1",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   }
