--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "scripts": {
     "prepare": "husky install",
+    "install": "concurrently --kill-others-on-fail \"yarn workspace helen install\"  \"yarn workspace paris install\"",
     "build": "concurrently --kill-others-on-fail \"yarn workspace helen build\"  \"yarn workspace paris build\"",
     "lint": "concurrently --kill-others-on-fail \"yarn workspace helen lint\"  \"yarn workspace paris lint\"",
     "format": "concurrently --kill-others-on-fail \"yarn workspace helen format\"  \"yarn workspace paris format\""
