--- a/helen/package.json
+++ b/helen/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "formik": "^2.2.9",
     "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
