--- a/helen/package.json
+++ b/helen/package.json
@@ -19,6 +19,7 @@
     "sass": "^1.49.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.1",
     "@types/node": "17.0.13",
     "@types/react": "17.0.38",
     "eslint": "8.8.0",
